--- a/module-1/homework/SharedPointer/src/control/CMakeLists.txt
+++ b/module-1/homework/SharedPointer/src/control/CMakeLists.txt
@@ -8,4 +8,4 @@ set_target_properties(control PROPERTIES LINKER_LANGUAGE CXX)
 ################ clang-format ################
 list(APPEND CMAKE_MODULE_PATH $ENV{CLANG_FORMAT_SUBMODULE}/cmake)
 include(ClangFormat)
-target_clangformat_setup(control)
+#target_clangformat_setup(control)
